--- a/Source/Client.PowerShell/Client.PowerShell.csproj
+++ b/Source/Client.PowerShell/Client.PowerShell.csproj
@@ -15,6 +15,9 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.12.0" />
+    <!-- DO NOT BUMP THIS VERSION UNTIL CONFIRMING
+    https://github.com/Azure/azure-sdk-for-net/issues/45361 was not resolved. A breaking fix would
+    be needed -->
     <PackageReference Include="Azure.Monitor.Ingestion" Version="1.1.2" />
     <PackageReference Include="System.Management.Automation" Version="7.4.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.PowerShell.Commands.Utility" Version="7.4.0"
